--- a/index.html
+++ b/index.html
@@ -158,5 +158,6 @@
             <ul></ul>
             <ul></ul>
           </div>
+          <script src="assets/js/index.js"></script>
   </body>
 </html>
