--- a/index.html
+++ b/index.html
@@ -30,133 +30,168 @@
                   <span><i class="fa fa-heart"></i></span>
                   <span><i class="fa fa-heart"></i></span>
                 </section>
-                  <div class="clock">2:10</div>
+                  <div id="timer">
+                      <label id="minutes">00</label>:<label id="seconds">00</label>
+                  </div>
               </div>
             </ul>
             <br></br>
                              <!-- TILES -->
             <ul>
-              <li><div class="pane">
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="a1">
                 <label class="card" for="a1">
                   <div class="flip"><i class="fa fa-anchor fa-2x"></i>
                   </div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="a2">
                 <label class="card" for="a2">
                   <div class="flip"><i class="fa fa-bolt fa-2x"></i></i>
                   </div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="a3">
                 <label class="card" for="a3">
                   <div class="flip"><i class="fa fa-futbol-o fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="a4">
                 <label class="card" for="a4">
                   <div class="flip"><i class="fa fa-taxi fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="a5">
                 <label class="card" for="a5">
                   <div class="flip"><i class="fa fa-cogs fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="a6">
                 <label class="card" for="a6">
                   <div class="flip"><i class="fa fa-bicycle fa-2x"></i></i></div>
                 </label>
-              </li>
+              </div>
+            </li>
             </ul>
             <ul>
-              <li><div class="pane">
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="b1">
                 <label class="card" for="b1">
                   <div class="flip"><i class="fa fa-cogs fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="b2">
                 <label class="card" for="b2">
                   <div class="flip"><i class="fa fa-taxi fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="b3">
                 <label class="card" for="b3">
                   <div class="flip"><i class="fa fa-hand-peace-o fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="b4">
                 <label class="card" for="b4">
                   <div class="flip"><i class="fa fa-anchor fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="b5">
                 <label class="card" for="b5">
                   <div class="flip"><i class="fa fa-bolt fa-2x"></i></i>
                   </div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="b6">
                 <label class="card" for="b6">
                   <div class="flip"><i class="fa fa-futbol-o fa-2x"></i>
                   </div>
                 </label>
-              </li>
+              </div>
+            </li>
             </ul>
             <ul>
-              <li><div class="pane">
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="c1">
                 <label class="card" for="c1">
                   <div class="flip"><i class="fa fa-recycle fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="c2">
                 <label class="card" for="c2">
                   <div class="flip"><i class="fa fa-medkit fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="c3">
                 <label class="card" for="c3">
                   <div class="flip"><i class="fa fa-recycle fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="c4">
                 <label class="card" for="c4">
                   <div class="flip"><i class="fa fa-hand-peace-o fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="c5">
                 <label class="card" for="c5">
                   <div class="flip"><i class="fa fa-bicycle fa-2x"></i></i></div>
                 </label>
-              </li>
-              <li><div class="pane">
+              </div>
+            </li>
+              <li>
+                <div class="pane">
                 <input type="checkbox" id="c6">
                 <label class="card" for="c6">
                   <div class="flip"><i class="fa fa-medkit fa-2x"></i></i></div>
                 </label>
-              </li>
-            </ul>
               </div>
+            </li>
             </ul>
-            <ul></ul>
-            <ul></ul>
+        </div>
           </div>
           <script src="assets/js/index.js"></script>
   </body>
